Cycles material preview unnecessarily re-rendering #45317

Closed
opened 2015-07-05 06:10:37 +02:00 by James W · 13 comments
Member

The material preview for Cycles will re-render whenever the window focus is switched (OS window that is, not Blender editor window), and whenever the focused window is moved or resized.

For example, if I have a file manager window in focus above Blender, the preview will re-render when I move the file manager window or switch focus back to Blender (or some other program). IMO this behaviour is incorrect, and the preview should only re-render when the material is changed, or the size of the preview panel changes (i.e. when resizing the properties window).

Tested with 631b53b (self built), on Fedora 22, running Openbox. Also tested on 2.75 RC1.

The material preview for Cycles will re-render whenever the window focus is switched (OS window that is, not Blender editor window), and whenever the focused window is moved or resized. For example, if I have a file manager window in focus above Blender, the preview will re-render when I move the file manager window or switch focus back to Blender (or some other program). IMO this behaviour is incorrect, and the preview should only re-render when the material is changed, or the size of the preview panel changes (i.e. when resizing the properties window). Tested with 631b53b (self built), on Fedora 22, running Openbox. Also tested on 2.75 RC1.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @JamesNZ

Added subscriber: @JamesNZ
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

I think the node editor needs to have canvas awareness if I'm correct before this is possible

I think the node editor needs to have canvas awareness if I'm correct before this is possible

Added subscriber: @Sergey

Added subscriber: @Sergey

@Blendify, this is nothing to do with canvas. Materials doesn't even have canvas to begin with..

@JamesNZ, i can not reproduce the issue here on Debian Jessie, running KDE tho.

  • Does it happen with any .blend file?
  • Does it happen with official 2.75 release from download.blender.org?
  • Does it happen on every focus change?
  • What are exact steps of making blender do to unnecessary re-render?
  • Does it happen with every window draw method (User Preferences -> Window Draw Method)?
  • Do you have any desktop effects which might interfere with this?
@Blendify, this is nothing to do with canvas. Materials doesn't even have canvas to begin with.. @JamesNZ, i can not reproduce the issue here on Debian Jessie, running KDE tho. - Does it happen with any .blend file? - Does it happen with official 2.75 release from download.blender.org? - Does it happen on every focus change? - What are exact steps of making blender do to unnecessary re-render? - Does it happen with every window draw method (User Preferences -> Window Draw Method)? - Do you have any desktop effects which might interfere with this?
Author
Member

@Sergey,

  • Yes, including the default cube.
  • Yes.
  • Yes, except when Blender is minimized.
  • Open Blender, switch to Cycles, show the material preview, and open some other program to change focus (AFAICT it doesn't happen with BI).
  • Yes, I just tried them all.
  • Nope, it's just vanilla Openbox.

EDIT: Just tested this on Gnome 3, and it doesn't happen. Perhaps it's Openbox specific or something?

@Sergey, - Yes, including the default cube. - Yes. - Yes, except when Blender is minimized. - Open Blender, switch to Cycles, show the material preview, and open some other program to change focus (AFAICT it doesn't happen with BI). - Yes, I just tried them all. - Nope, it's just vanilla Openbox. EDIT: Just tested this on Gnome 3, and it doesn't happen. Perhaps it's Openbox specific or something?
Campbell Barton was assigned by Sergey Sharybin 2015-07-06 13:31:20 +02:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Yep, it's openbox specific. @ideasman42 managed to reproduce the issue.

Yep, it's openbox specific. @ideasman42 managed to reproduce the issue.

This issue was referenced by b0df19667f

This issue was referenced by b0df19667fa30ad80631da86198710981ca03824

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @DuarteRamos

Added subscriber: @DuarteRamos

Removed subscriber: @DuarteRamos

Removed subscriber: @DuarteRamos
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45317
No description provided.