Fix T45317: Cycles material preview unnecessarily re-rendering

The issue was caused by wrong fix for T22741 which forced redraws on any window
event, like Expose. Use proper NV_WM | ND_UNDO listener instead,